<resources>
    <string name="null_point_exception">NullPointException occurs..</string>
    <string name="binding_error">Binding not initialized to reference the view.</string>
    <string name="app_name">INSOPTAndroidPractice</string>
    <string name="welcomesopt">Welcome to Sopt</string>
    <string name="id">ID</string>
    <string name="input_id">아이디를 입력하세요.</string>
    <string name="password">비밀번호</string>
    <string name="input_password">비밀번호를 입력하세요.</string>
    <string name="signup">회원가입</string>
    <string name="login">login</string>
    <string name="sign_up_name">SIGNUP</string>
    <string name="mbti">MBTI</string>
    <string name="acess_signup">회원가입 완료</string>
    <string name="sign_up_mbti">선택 사항입니다</string>
    <string name="my_page_name">이름 : %s</string>
    <string name="my_page_email">Email : %s</string>
    <string name="sign_up_success">회원가입이 완료되었다</string>
    <string name="sign_in_success">로그인에 성공했습니다</string>
    <string name="sign_in_fail">아이디/비밀번호를 확인해주세요</string>
    <string name="sign_in_auto_login">자동 로그인"</string>
    <string name="setting_title">환경설정</string>
    <string name="setting_logout">로그아웃</string>
    <string name="bottom_navi_home">홈</string>
    <string name="bottom_navi_galley">갤러리</string>
    <string name="bottom_navi_search">검색</string>
    <string name="empty_view_content">%s\'s Follower가 없어요..</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
