<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="org.sopt.sample.presentation.sign_up.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.sign_up.SignUpActivity">

        <TextView
            android:id="@+id/tv_follower_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/signup"
            android:textAppearance="@style/H1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginTop="40dp"
            android:text="@string/id"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_follower_name" />

        <EditText
            android:id="@+id/edt_input_id"
            style="@style/InSoptEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:background="@null"
            android:hint="@string/input_id"
            android:inputType="textAutoComplete"
            android:maxLength="10"
            android:paddingStart="3dp"
            android:text="@={vm.userId}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_id" />

        <View
            android:id="@+id/view_id"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="4dp"
            android:background="@{vm.isValidIdFormatOf(vm.userId) ? @color/hous_g_3 : @color/hous_red }"
            app:layout_constraintEnd_toEndOf="@id/edt_input_id"
            app:layout_constraintStart_toStartOf="@id/edt_input_id"
            app:layout_constraintTop_toBottomOf="@id/edt_input_id"
            tools:background="@color/hous_blue" />

        <TextView
            android:id="@+id/tv_id_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="end"
            android:text="아이디 양식이 잘못되었습니다."
            android:textColor="@color/hous_red"
            android:textSize="10dp"
            android:visibility="@{vm.isValidIdFormatOf(vm.userId) ? View.GONE: View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="@id/view_id"
            app:layout_constraintTop_toBottomOf="@id/view_id" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_input_id" />

        <EditText
            android:id="@+id/edt_input_password"
            style="@style/InSoptEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:background="@null"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:maxLength="12"
            android:paddingStart="3dp"
            android:text="@={vm.userPassWord}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password"
            tools:text="123" />

        <View
            android:id="@+id/view_pw"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="4dp"
            android:background="@{vm.isValidPwFormatOf(vm.userPassWord) ? @color/hous_g_3 : @color/hous_red }"
            app:layout_constraintEnd_toEndOf="@id/edt_input_password"
            app:layout_constraintStart_toStartOf="@id/edt_input_password"
            app:layout_constraintTop_toBottomOf="@id/edt_input_password"
            tools:background="@color/hous_blue" />

        <TextView
            android:id="@+id/tv_pw_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="end"
            android:text="패스워드 양식이 잘못되었습니다."
            android:textColor="@color/hous_red"
            android:textSize="10dp"
            android:visibility="@{vm.isValidPwFormatOf(vm.userPassWord) ? View.GONE: View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="@id/view_pw"
            app:layout_constraintTop_toBottomOf="@id/view_pw" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginTop="15dp"
            android:text="이름"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_input_password" />

        <EditText
            android:id="@+id/edt_input_user_name"
            style="@style/InSoptEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:hint="이름을 입력해주세요"
            android:text="@={vm.userName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
            tools:text="ab" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup"
            style="@style/InSoptBasicButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@{vm.isValidSignUpFormat== true ?@color/hous_blue :@color/hous_g_6}"
            android:clickable="@{vm.isValidSignUpFormat== true }"
            android:text="@string/acess_signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
